--- a/scss/extensions/_button.scss
+++ b/scss/extensions/_button.scss
@@ -19,24 +19,24 @@
   vertical-align: middle;
   white-space: nowrap;
 
-  @include focus-hover {
-    background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
-    color: color-chooser($btn-color-dark, $btn-color-light);
+  .discourse-no-touch & {
+    &:hover,
+    &.btn-hover {
+      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+      color: color-chooser($btn-color-dark, $btn-color-light);
+    }
   }
 
-  &.btn-hover {
+  &:focus {
     background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     color: color-chooser($btn-color-dark, $btn-color-light);
+    outline: 0;
   }
 
   &:active,
   &.btn-active {
     background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
     color: color-chooser($btn-color-dark, $btn-color-light);
-  }
-
-  &:focus {
-    outline: 0;
   }
 
   &[disabled],
@@ -55,11 +55,14 @@
     background-color: transparent;
     color: unquote('$danger');
 
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+    .discourse-no-touch & {
+      &:hover,
+      &.btn-hover {
+        background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+      }
     }
 
-    &.btn-hover {
+    &:focus {
       background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     }
 
@@ -73,11 +76,14 @@
     background-color: transparent;
     color: unquote('$tertiary');
 
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+    .discourse-no-touch & {
+      &:hover,
+      &.btn-hover {
+        background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+      }
     }
 
-    &.btn-hover {
+    &:focus {
       background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     }
 
@@ -94,14 +100,15 @@
     color: unquote('$danger');
 
     .discourse-no-touch & {
-      @include focus-hover {
+      &:hover,
+      &.btn-hover {
         background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
         color: unquote('$danger');
       }
+    }
 
-      &:active {
-        background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
-      }
+    &:focus {
+      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     }
   }
 
@@ -110,14 +117,15 @@
     color: unquote('$success');
 
     .discourse-no-touch & {
-      @include focus-hover {
+      &:hover,
+      &.btn-hover {
         background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
         color: unquote('$success');
       }
+    }
 
-      &:active {
-        background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
-      }
+    &:focus {
+      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     }
   }
 }
@@ -130,19 +138,22 @@
   background-color: color-chooser($btn-bg-dark, $btn-bg-light);
   box-shadow: $btn-box-shadow;
 
-  @include focus-hover {
-    background-color: color-chooser($btn-bg-dark, $btn-bg-light);
-    background-image: linear-gradient(to bottom, color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light), color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light));
+  .discourse-no-touch & {
+    &:hover,
+    &.btn-hover {
+      background-color: color-chooser($btn-bg-dark, $btn-bg-light);
+      background-image: linear-gradient(to bottom, color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light), color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light));
+    }
   }
 
-  &.btn-hover {
+  &:focus {
     background-color: color-chooser($btn-bg-dark, $btn-bg-light);
     background-image: linear-gradient(to bottom, color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light), color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light));
   }
 
   &:active,
   &.btn-active {
-    background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
+    background-color: color-chooser($btn-bg-dark, $btn-bg-light);
     background-image: linear-gradient(to bottom, color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light), color-chooser($btn-bg-overlay-dark, $btn-bg-overlay-light));
     box-shadow: $btn-box-shadow-active;
   }
@@ -157,11 +168,45 @@
   &.btn-danger {
     background-color: unquote('$danger');
     color: color-dynamic(unquote('$danger'));
+
+    .discourse-no-touch & {
+      &:hover,
+      &.btn-hover {
+        background-color: unquote('$danger');
+        color: color-dynamic(unquote('$danger'));
+      }
+    }
+
+    &:focus {
+      background-color: unquote('$danger');
+    }
+
+    &:active,
+    &.btn-active {
+      background-color: unquote('$danger');
+    }
   }
 
   &.btn-primary {
     background-color: unquote('$tertiary');
     color: color-dynamic(unquote('$tertiary'));
+
+    .discourse-no-touch & {
+      &:hover,
+      &.btn-hover {
+        background-color: unquote('$tertiary');
+        color: color-dynamic(unquote('$tertiary'));
+      }
+    }
+
+    &:focus {
+      background-color: unquote('$tertiary');
+    }
+
+    &:active,
+    &.btn-active {
+      background-color: unquote('$tertiary');
+    }
   }
 }
 
@@ -169,12 +214,15 @@
   background-color: transparent;
   box-shadow: none;
 
-  @include focus-hover {
-    background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
-    background-image: none;
+  .discourse-no-touch & {
+    &:hover,
+    &.btn-hover {
+      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+      background-image: none;
+    }
   }
 
-  &.btn-hover {
+  &:focus {
     background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     background-image: none;
   }
@@ -194,11 +242,14 @@
     background-color: transparent;
     color: unquote('$danger');
 
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+    .discourse-no-touch & {
+      &:hover,
+      &.btn-hover {
+        background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+      }
     }
 
-    &.btn-hover {
+    &:focus {
       background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     }
 
@@ -212,11 +263,14 @@
     background-color: transparent;
     color: unquote('$tertiary');
 
-    @include focus-hover {
-      background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+    .discourse-no-touch & {
+      &:hover,
+      &.btn-hover {
+        background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
+      }
     }
 
-    &.btn-hover {
+    &:focus {
       background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
     }
 
