Fix for Algolia search plugin

--- a/common/common.scss
+++ b/common/common.scss
@@ -2207,6 +2207,13 @@ div.ac-wrap input[type='text'] {
   margin-right: 16px;
 }
 
+.algolia-enabled .d-header-icons .algolia-holder {
+  padding: 0;
+}
+.algolia-enabled .d-header-icons .algolia-holder form {
+  margin-bottom: 0;
+}
+
 .d-header {
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.4);
   height: auto;
@@ -2255,6 +2262,7 @@ div.ac-wrap input[type='text'] {
 }
 .d-header .extra-info-wrapper {
   margin-left: 8px;
+  max-width: 100% !important;
 }
 .d-header .extra-info-wrapper .badge-wrapper {
   margin-right: 0;
